RESOLVED FIXED302398
REGRESSION(302865@main) [WebDriver] Frame used after move when notifying automation session of new frame
https://bugs.webkit.org/show_bug.cgi?id=302398
Summary REGRESSION(302865@main) [WebDriver] Frame used after move when notifying auto...
Lauro Moura
Reported 2025-11-12 07:12:08 PST
Triggers crash on new frame creation. About 450 new failures detected: - Previous build: https://build.webkit.org/#/builders/730/builds/179156/steps/12/logs/stdio - Pre: https://build.webkit.org/#/builders/730/builds/179157/steps/12/logs/stdio Patch incoming.
Attachments
Lauro Moura
Comment 1 2025-11-12 09:00:45 PST
EWS
Comment 2 2025-11-13 12:13:20 PST
Committed 302998@main (9fb27e53ae40): <https://commits.webkit.org/302998@main> Reviewed commits have been landed. Closing PR #53810 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-11-13 12:14:12 PST
Note You need to log in before you can comment on or make changes to this bug.