REGRESSION(302865@main) [WebDriver] Frame used after move when notifying automation session of new frame https://bugs.webkit.org/show_bug.cgi?id=302398

Reviewed by BJ Burg.

Ensure we keep a ref for it to notify the automation session..

* Source/WebKit/UIProcess/WebFrameProxy.cpp:
(WebKit::WebFrameProxy::didCreateSubframe):

Canonical link: https://commits.webkit.org/302998@main